--- a/homework_3/index.html
+++ b/homework_3/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div class="chessboard">
-        <!-- left-line -->
-        <div class="top-line"></div>
+        <div class="corner"></div>
         <div class="top-line">a</div>
         <div class="top-line">b</div>
         <div class="top-line">c</div>
@@ -19,8 +18,7 @@
         <div class="top-line">f</div>
         <div class="top-line">g</div>
         <div class="top-line">h</div>
-        <div class="top-line"></div>
-        <!-- 1st -->
+        <div class="corner"></div>
         <div class="left-line">8</div>
         <div class="white"></div>
         <div class="black"></div>
@@ -31,7 +29,6 @@
         <div class="white"></div>
         <div class="black"></div>
         <div class="right-line">8</div>
-        <!-- 2nd -->
         <div class="left-line">7</div>
         <div class="black"></div>
         <div class="white"></div>
@@ -42,7 +39,6 @@
         <div class="black"></div>
         <div class="white"></div>
         <div class="right-line">7</div>
-        <!-- 3th -->
         <div class="left-line">6</div>
         <div class="white"></div>
         <div class="black"></div>
@@ -53,7 +49,6 @@
         <div class="white"></div>
         <div class="black"></div>
         <div class="right-line">6</div>
-        <!-- 4st -->
         <div class="left-line">5</div>
         <div class="black"></div>
         <div class="white"></div>
@@ -64,7 +59,6 @@
         <div class="black"></div>
         <div class="white"></div>
         <div class="right-line">5</div>
-        <!-- 5th -->
         <div class="left-line">4</div>
         <div class="white"></div>
         <div class="black"></div>
@@ -75,7 +69,6 @@
         <div class="white"></div>
         <div class="black"></div>
         <div class="right-line">4</div>
-        <!-- 6th -->
         <div class="left-line">3</div>
         <div class="black"></div>
         <div class="white"></div>
@@ -86,7 +79,6 @@
         <div class="black"></div>
         <div class="white"></div>
         <div class="right-line">3</div>
-        <!-- 7th -->
         <div class="left-line">2</div>
         <div class="white"></div>
         <div class="black"></div>
@@ -97,7 +89,6 @@
         <div class="white"></div>
         <div class="black"></div>
         <div class="right-line">2</div>
-        <!-- 8th -->
         <div class="left-line">1</div>
         <div class="black"></div>
         <div class="white"></div>
@@ -108,8 +99,7 @@
         <div class="black"></div>
         <div class="white"></div>
         <div class="right-line">1</div>
-        <!-- End -->
-        <div class="bottom-line"></div>
+        <div class="corner"></div>
         <div class="bottom-line">a</div>
         <div class="bottom-line">b</div>
         <div class="bottom-line">c</div>
@@ -118,8 +108,7 @@
         <div class="bottom-line">f</div>
         <div class="bottom-line">g</div>
         <div class="bottom-line">h</div>
-        <div class="bottom-line"></div>
-    
+        <div class="corner"></div>
       </div>
 </body>
 </html>
