--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homework 1</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet"  type="text/css" href="style.css">
 </head>
 <body>
     <p>Task 1</p>
@@ -31,7 +31,7 @@
         </thead>
             <tbody>
                 <tr>
-                    <td>Зерновые продукты <img src="/images/bread.jpg" alt="bread"></td>
+                    <td>Зерновые продукты <img src="images/bread.jpg" alt="bread"></td>
                     <td>6-8</td>
                     <td> 
                         <ul>
@@ -41,10 +41,10 @@
                         </ul>
                     </td>
                     <td>Хлеб (лучше цельнозерновой), пита, крупы, хлебцы, крекеры и т.п.</td>
-                    <td>Главные источники энергии ипищевых волокон</td>
+                    <td>Главные источники энергии и пищевых волокон</td>
                 </tr>
                 <tr>
-                    <td>Овощи <img src="/images/vegetables.jpg" alt="vegetables"></td>
+                    <td>Овощи <img src="images/vegetables.jpg" alt="vegetables"></td>
                     <td>4-5</td>
                     <td>
                         <ul>
@@ -57,7 +57,7 @@
                     <td>Главные источники энергии и пищевых волокон</td>
                 </tr>
                 <tr>
-                    <td>Фрукты <img src="/images/fruits.jpg" alt="fruits"></td>
+                    <td>Фрукты <img src="images/fruits.jpg" alt="fruits"></td>
                     <td>2-3</td>
                     <td>
                         <ul>
@@ -66,11 +66,11 @@
                             <li>&#189; чашки** свежих или замороженных фруктов,<br>&#188; чашки сухофруктов</li>
                         </ul>
                     </td>
-                    <td>Цитрусовые, виноград, бананы, абрикосы, персики, ягоды, финики, соки без добавик сахара</td>
+                    <td>Цитрусовые, виноград, бананы, абрикосы, персики, ягоды, финики, соки без добавки сахара</td>
                     <td>Богатые источники калия, магния и пищевых волокон</td>
                 </tr>
                 <tr>
-                    <td>Молочные продукты (обезжиренные или с низким содержанием жира) <img src="/images/milk.jpg" alt="milk"></td>
+                    <td>Молочные продукты (обезжиренные или с низким содержанием жира) <img src="images/milk.jpg" alt="milk"></td>
                     <td>4-5</td>
                     <td>
                         <ul>
@@ -83,18 +83,18 @@
                     <td>Богаты кальцием и белками</td>
                 </tr>
                 <tr>
-                    <td>Постное мясо, птица и рыба <img src="/images/meat.jpg" alt="meat"></td>
+                    <td>Постное мясо, птица и рыба <img src="images/meat.jpg" alt="meat"></td>
                     <td>< 170 г</td>
                     <td>
                          <ul>
                             <li>80-90 г приготовленного мяса, птицы или рыбы</li>
                          </ul>
                     </td>
-                    <td>Мясо постное, без видисого жира, птица без кожи. Рыба может быть жирной</td>
+                    <td>Мясо постное, без видимого жира, птица без кожи. Рыба может быть жирной</td>
                     <td>Богаты белком и магнием</td>
                 </tr>
                 <tr>
-                    <td>Орехи, семечки, сухие фасоль и горох <img src="/images/nuts.jpg" alt="nuts"></td>
+                    <td>Орехи, семечки, сухие фасоль и горох <img src="images/nuts.jpg" alt="nuts"></td>
                     <td>4-5 в неделю</td>
                     <td>
                         <ul>
@@ -107,7 +107,7 @@
                     <td>Богаты энергией, магнием, калием, белками и волокнами</td>
                 </tr>
                 <tr>
-                    <td>Жиры и масла <img src="/images/oil.jpg" alt="oil"></td>
+                    <td>Жиры и масла <img src="images/oil.jpg" alt="oil"></td>
                     <td>2-3</td>
                     <td>
                         <ul>
@@ -117,11 +117,11 @@
                             <li>2 ст.л. салатного соуса</li>
                         </ul>
                     </td>
-                    <td>Спреды (мягкие маргарины), низкожирный майонез, салатные соусы, люьые растительные масла</td>
+                    <td>Спреды (мягкие маргарины), низкожирный майонез, салатные соусы, любые растительные масла</td>
                     <td>Источник жирных кислот</td>
                 </tr>
                 <tr>
-                    <td>Сладости <img src="/images/sweets.jpg" alt="sweets"></td>
+                    <td>Сладости <img src="images/sweets.jpg" alt="sweets"></td>
                     <td>< 5 в неделю</td>
                     <td>
                         <ul>
@@ -129,7 +129,7 @@
                             <li>1 ст.л. варенья</li>
                         </ul>
                     </td>
-                    <td>Сахар, варенье, конфеты, зефир, пастила, мороженное</td>
+                    <td>Сахар, варенье, конфеты, зефир, пастила, мороженое</td>
                     <td>Сладости должны быть с низким содержанием жира</td>
                 </tr>
             </tbody>
